--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flaunch
 description: A CLI tool to set up Flutter projects quickly with predefined structures, dependencies, and boilerplate code.
-version: 1.0.0+2
+version: 1.0.0+3
 repository: https://github.com/Uvais-Mohammad/flaunch
 homepage: https://github.com/Uvais-Mohammad/flaunch
 
@@ -12,6 +12,7 @@ executables:
 
 dependencies:
   args: ^2.4.2
+  pub_semver: ^2.1.5
 
 dev_dependencies:
   test: ^1.24.0
